Backport all code to Java 8 bytecode for CheerpJ 3.1 compatibility
- Target Java 8 class files (major version 52) in all subprojects so the fat
  JAR can be loaded by CheerpJ 3.1's Java 8 runtime
- Override TargetJvmVersion attribute on compileClasspath so adventure-api 5.x
  (requires Java 21) still resolves even while outputting Java 8 bytecode
- Convert records to regular classes: DrawPosImpl, GenricContainer,
  StateRefImpl, FontSequence, ResourcePackSendInfo
- Replace switch-expression-with-patterns in TextRenderer with if/else chains
- Replace text block in BuiltInTcpResourcePackSender with string concat
- Replace Java 9-17 APIs with Java 8 equivalents: Path.of→Paths.get,
  Map.of→Collections.singletonMap/emptyMap, Files.writeString→Files.write,
  InputStream.readAllBytes→manual loop, HexFormat→manual hex conversion,
  List.of→Collections.singletonList, List.getFirst→List.get(0),
  SimpleFileVisitor<>→SimpleFileVisitor<Path>
- Rebuild fat JAR: class file version 52 confirmed, 512 KB

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0118LQoZiFPP1XDzoz54indS